# echoes-test

./: .gitignore  ARCHITECTURE.md  implementation_plan.md.resolved  migration_script.py  walkthrough.md.resolved
echoes-backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
echoes-backend/alembic/: env.py
echoes-backend/scripts/: seed_data.py
echoes-backend/src/: __init__.py  config.py  main.py
echoes-backend/src/api/: __init__.py
echoes-backend/src/api/api/: __init__.py  deps.py
echoes-backend/src/api/api/v1/: auth.py  (+8 more)
echoes-backend/src/api/schemas/: __init__.py  schemas.py
echoes-backend/src/application/: __init__.py
echoes-backend/src/application/dto/: __init__.py  combat_dto.py  item_dto.py  player_dto.py
echoes-backend/src/application/interfaces/: __init__.py  repositories.py  services.py
echoes-backend/src/application/use_cases/: __init__.py
echoes-backend/src/core/: __init__.py
echoes-backend/src/core/ai/: __init__.py  monster_ai.py
echoes-backend/src/core/effects/: __init__.py  apply_status.py  build_gauge.py  conditional.py  damage.py  heal.py  modify_stat.py  remove_status.py  shield.py
echoes-backend/src/core/engine/: __init__.py  combat_engine.py  effect_registry.py  formula_engine.py  status_engine.py
echoes-backend/src/domain/: __init__.py  exceptions.py
echoes-backend/src/domain/entities/: __init__.py  combat.py  item.py  monster.py  progression.py  spell.py  user.py
echoes-backend/src/domain/enums/: __init__.py  types.py
echoes-backend/src/infrastructure/: __init__.py
(+196 files in other folders)
